fix overflow img

--- a/Project1/assets/css/style.scss
+++ b/Project1/assets/css/style.scss
@@ -426,6 +426,7 @@ html {
 
 .content {
     background-color: var(--black-color);
+    overflow: hidden;
 }
 
 /* first-content */
@@ -1518,13 +1519,22 @@ html {
 
 /* content-conectivity */
 .content-conectivity__pic-container {
+    display: block;
+    width: 3008px;
+    height: 500px;
+    position: relative;
+    left: 50%;
+    margin-left: -1504px;
     margin-top: 100px;
+    margin-bottom: -260px;
 }
 
 .content-conectivity__pic {
     position: relative;
-    left: -105%;
+    // left: -105%;
     margin-bottom: -260px;
+    width: 100%;
+    height: 100%;
 }
 
 .content-tag-conectivity {
